Fixed spacing issues large dono total

--- a/graphics/css/xl.css
+++ b/graphics/css/xl.css
@@ -7,3 +7,8 @@ body {
     font-size: 72px;
     line-height: 84px;
 }
+
+#donation-total {
+    font-size: 128px;
+    line-height: 128px;
+}
